--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "bootstrap": "4.3.1",
+    "@rails/webpacker": "^5.4.3",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
