--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^5.4.3",
+    "@rails/webpacker": "5.4.3",
+    "@webpack-cli/init": "^1.0.3",
     "bootstrap": "^5.1.3",
+    "custom": "^0.0.0",
     "jquery": "^3.6.0",
+    "packs": "^2.1.6",
     "popper.js": "^1.16.1",
-    "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3"
   }
 }
