--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sport-hub-portal",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -11,7 +12,6 @@
     "custom": "^0.0.0",
     "jquery": "^3.6.0",
     "packs": "^2.1.6",
-    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
